# Your-Code-Reviewer

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
reports/: errorcase_py_20260106_000146.json
src/ocr/cli/: main.py
src/ocr/core/: chunking.py  reviewer.py  schemas.py
src/ocr/prompts/: review.txt  system.txt
src/ocr/utils/: fs.py
